src/objects/OV_KPI_Transaction_Favorite__c.object
<CustomObject>
    <fields>
        <fullName>Chatter_Update_Message__c</fullName>
        <formula>&quot;The value of your KPI for &quot; &amp;
KPI_Transaction__r.Current_Time_Period__c &amp; &apos; &apos; &amp;
KPI_Transaction__r.Time_Range__r.Name &amp; &apos; &apos; &amp;
KPI_Transaction__r.KPI_Name__r.Name &amp;
&quot;, based on the criteria below, has changed from &quot; &amp;
KPI_Transaction__r.Value_Prefix_Previous_Formatted__c &amp; &apos;&apos; &amp;
KPI_Transaction__r.Value_Previous_Period__c &amp; &apos;&apos; &amp;
KPI_Transaction__r.Value_Suffix_Previous_Formatted__c &amp; 
&quot; to &quot; &amp;
KPI_Transaction__r.Value_Prefix_Formatted__c &amp; &apos;&apos; &amp;
KPI_Transaction__r.Value_Current_Period__c &amp; &apos;&apos; &amp;
KPI_Transaction__r.Value_Suffix_Formatted__c &amp; 
&quot;.&quot; &amp; MID($Label.OV_NewLine,2,2) &amp; MID($Label.OV_NewLine,2,2) &amp;
&apos;{0}&apos; 
&amp; MID($Label.OV_NewLine,2,2) &amp; MID($Label.OV_NewLine,2,2) &amp;
&quot;Please click on the link below to view this KPI tile in OneView Next Generation.&quot;
&amp; MID($Label.OV_NewLine,2,2) &amp; MID($Label.OV_NewLine,2,2)&amp;
&quot;Please disregard the view/comment button and do not reply if viewing in email. This functionality is not applicable in OneView Next Generation at this time.&quot;</formula>
        <label>Chatter Update Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Transaction__c</fullName>
        <label>KPI Transaction</label>
        <referenceTo>OV_KPI_Transaction__c</referenceTo>
        <relationshipLabel>One View KPI Transaction Favorites</relationshipLabel>
        <relationshipName>One_View_KPI_Transaction_Favorites</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>One View Report Tile</label>
        <referenceTo>OV_Report__c</referenceTo>
        <relationshipLabel>One View KPI Transaction Favorites</relationshipLabel>
        <relationshipName>One_View_KPI_Transaction_Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>OV_Profile__c</referenceTo>
        <relationshipLabel>One View KPI Transaction Favorites</relationshipLabel>
        <relationshipName>One_View_KPI_Transaction_Favorites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wants_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wants Notifications</label>
        <type>Checkbox</type>
    </fields>
    <label>One View KPI Transaction Favorite</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>KPI_Transaction__c</columns>
        <columns>Report__c</columns>
        <columns>Wants_Notifications__c</columns>
        <columns>Chatter_Update_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>One_View_Global_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>One View KPI Transaction Favorite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One View KPI Transaction Favorites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>